--- a/index.html
+++ b/index.html
@@ -15,4 +15,32 @@
 
 </head>
 
+<body>
+      <!-- Header & Navbar --> 
+      <header>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+          <a class="navbar-brand brand" id="brandTitle" href="#">DANIEL TESTA</a>
+          
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainnavbar" aria-controls="mainnavbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="mainnavbar">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item">
+                <a class="nav-link" href="#aboutSection">ABOUT ME</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#portfolioSection">PORTFOLIO</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#contactSection">CONTACT</a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </header>
+
+</body>
+
 </html>
