--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
           <a class="navbar-brand brand" id="brandTitle" href="#">DANIEL TESTA</a>
-          
+
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainnavbar" aria-controls="mainnavbar" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -40,6 +40,14 @@
           </div>
         </nav>
       </header>
+
+      <!-- Main section -->
+      <main class="mt-5">
+
+        <h1 class="main-heading">FULL STACK WEB DEVELOPER</h1>
+        <p class="lead mt-2 mb-3">Passionate, self-motivated and creative with an education in  Information Technology and Informatics and Entrepreneurship.</p>
+
+      </main>
 
 </body>
 
