--- a/index.html
+++ b/index.html
@@ -70,6 +70,30 @@
       </div>
     </a>
 
+     <!-- Contact Section -->
+    <a name="contactSection">
+      <div class="row mb-5">
+        <div class="col pt-5">
+          <h3 class="text-center contact-section">CONTACT ME</h3>
+          <a href="#coverPage"><i class="fa fa-arrow-circle-o-up fa-2x" aria-hidden="true"></i></a>
+          <hr>
+          <div class="row mt-5">
+            <div class='col'>
+              <p>Email: djt144@scarletmail.rutgers.edu</p>
+            </div>
+          </div>
+          <div class="row mt-2">  
+              <div class="col text-center">
+                  <h4>ADDITIONAL LINKS</h4>
+                <br>
+
+              </div>
+          </div>
+       </div>
+      </div>
+    </a>
+  </div>
+
 </body>
 
 </html>
