--- a/index.html
+++ b/index.html
@@ -70,6 +70,40 @@
       </div>
     </a>
 
+    <!-- Portfolio Section -->
+     <a name="portfolioSection">
+      <div class="row mb-5">
+        <div class='col pt-5 portfolio-section'>
+          <h3 class="text-center">PORTFOLIO</h3>
+          <a href="#coverPage"><i class="fa fa-arrow-circle-o-up fa-2x" aria-hidden="true"></i></a>
+          <hr>
+
+
+
+          <div class="row mt-5 mb-sm-5">
+            <div class="col-sm mb-sm-0 mb-4">
+              <div class="card" id="characterQuiz">
+
+                  <img class="img-fluid rounded" src="http://via.placeholder.com/300">
+
+ 
+              </div>
+              <span><a class="projLink" data-hover="Which Character Are You?" href="https://still-sands-16455.herokuapp.com/" target="_blank">Which Character Are You?</a></span>  
+            </div>
+
+            <div class="col-sm mb-sm-0 mb-4">
+              <div class="card" id="hangman">
+
+                  <img class="img-fluid rounded" src="http://via.placeholder.com/300">
+
+              </div>
+              <span><a class="projLink" data-hover="Hangman Game" href="https://dantesta.github.io/Hangman-Game/" target="_blank">Hangman Game</a></span>
+            </div>
+          </div> 
+      </div> 
+    </div>  
+    </a> 
+
      <!-- Contact Section -->
     <a name="contactSection">
       <div class="row mb-5">
