--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
 	<!-- JS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://use.fontawesome.com/c4965b9a48.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js"></script>
 
 </head>
@@ -54,7 +56,7 @@
       <div class="row mb-5">
         <div class="col pt-5">
           <h3 class="text-center about-me">ABOUT ME</h3>
-         
+         <a href="#coverPage"><i class="fa fa-arrow-circle-o-up fa-2x" aria-hidden="true"></i></a>
           <hr>
           <div class="row mt-4 text-justify">
             <div class='col'>
