--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
       <!-- Header & Navbar --> 
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
 
           <a class="navbar-brand brand" id="brandTitle" href="#">DANIEL TESTA</a>
 
@@ -86,7 +86,7 @@
             <div class="col-sm mb-sm-0 mb-4">
               <div class="card" id="characterQuiz">
 
-                  <img class="img-fluid rounded" src="http://via.placeholder.com/300">
+                  <img class="img-fluid rounded" src="https://i.gyazo.com/7a8d79e9edbe7d805427f1c61fe14198.png">
 
  
               </div>
@@ -96,7 +96,7 @@
             <div class="col-sm mb-sm-0 mb-4">
               <div class="card" id="hangman">
 
-                  <img class="img-fluid rounded" src="http://via.placeholder.com/300">
+                  <img class="img-fluid rounded" src="https://i.gyazo.com/d1816c995934fb52adeb82ce95b583fd.png">
 
               </div>
               <span><a class="projLink" data-hover="Hangman Game" href="https://dantesta.github.io/Hangman-Game/" target="_blank">Hangman Game</a></span>
@@ -122,6 +122,11 @@
               <div class="col text-center">
                   <h4>ADDITIONAL LINKS</h4>
                 <br>
+                <p>
+                  <a href="https://www.linkedin.com/in/daniel-testa-12071aa3/" target="_blank"><i class="fa fa-linkedin-square fa-3x" aria-hidden="true"></i></a> 
+
+                  <a href="https://github.com/dantesta" target="_blank"><i class="fa fa-github fa-3x" aria-hidden="true"></i></a> 
+                </p>
 
               </div>
           </div>
