--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 </head>
 
 <body>
+
+    <!-- Page Links -->
+  <a name="coverPage">
+    <div class="site-wrapper mb-5">
+
       <!-- Header & Navbar --> 
       <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
@@ -50,6 +55,11 @@
         <p class="lead mt-2 mb-3">Passionate, self-motivated and creative with an education in  Information Technology and Informatics and Entrepreneurship.</p>
 
       </main>
+
+    </div>
+  </a>
+
+    <div class="container">
 
       <!-- About Section -->
     <a name="aboutSection">
