new fonts and images

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 	<!-- CSS -->
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
 	<!-- JS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://use.fontawesome.com/c4965b9a48.js"></script>
@@ -96,7 +97,7 @@
             <div class="col-sm mb-sm-0 mb-4">
               <div class="card" id="characterQuiz">
 
-                  <img class="img-fluid rounded" src="https://i.gyazo.com/7a8d79e9edbe7d805427f1c61fe14198.png">
+                  <img class="img-fluid rounded" src="https://i.gyazo.com/97cd33cd82371e24610e4686382a5dc5.jpg">
 
  
               </div>
@@ -112,6 +113,32 @@
               <span><a class="projLink" data-hover="Hangman Game" href="https://dantesta.github.io/Hangman-Game/" target="_blank">Hangman Game</a></span>
             </div>
           </div> 
+
+                    <div class="row mt-5 mb-sm-5">
+            <div class="col-sm mb-sm-0 mb-4">
+              <div class="card" id="characterQuiz">
+
+                  <img class="img-fluid rounded" src="https://i.gyazo.com/dcfc5e0b06dd4944a1812235c3bb5fae.png">
+
+ 
+              </div>
+              <span><a class="projLink" data-hover="Which Character Are You?" href="https://still-sands-16455.herokuapp.com/" target="_blank">Which Character Are You?</a></span>  
+            </div>
+
+            <div class="col-sm mb-sm-0 mb-4">
+              <div class="card" id="hangman">
+
+                  <img class="img-fluid rounded" src="https://i.gyazo.com/d1816c995934fb52adeb82ce95b583fd.png">
+
+              </div>
+              <span><a class="projLink" data-hover="Hangman Game" href="https://dantesta.github.io/Hangman-Game/" target="_blank">Hangman Game</a></span>
+            </div>
+          </div> 
+
+
+
+
+
       </div> 
     </div>  
     </a> 
