--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
       <!-- Header & Navbar --> 
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
           <a class="navbar-brand brand" id="brandTitle" href="#">DANIEL TESTA</a>
 
