--- a/index.html
+++ b/index.html
@@ -59,10 +59,11 @@
 
     </div>
   </a>
-
+    <div class = "about">
     <div class="container">
 
       <!-- About Section -->
+
     <a name="aboutSection">
       <div class="row mb-5">
         <div class="col pt-5">
@@ -82,7 +83,11 @@
         </div>
       </div>
     </a>
+  </div>
+</div>
 
+<div class="portfolio">
+<div class="container">
     <!-- Portfolio Section -->
      <a name="portfolioSection">
       <div class="row mb-5">
@@ -122,7 +127,7 @@
 
  
               </div>
-              <span><a class="projLink" data-hover="Which Character Are You?" href="https://still-sands-16455.herokuapp.com/" target="_blank">Which Character Are You?</a></span>  
+              <span><a class="projLink" data-hover="Trivia Game" href="https://dantesta.github.io/TriviaGame/" target="_blank">Trivia Game</a></span>  
             </div>
 
             <div class="col-sm mb-sm-0 mb-4">
@@ -142,7 +147,11 @@
       </div> 
     </div>  
     </a> 
+</div>
+</div>
 
+  <div class="contact">
+    <div class="container">
      <!-- Contact Section -->
     <a name="contactSection">
       <div class="row mb-5">
@@ -170,6 +179,7 @@
        </div>
       </div>
     </a>
+  </div>
   </div>
 
     <script src="assets/js/scroll.js"></script>
