--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<!-- CSS -->
 	<link rel="stylesheet" href="assets/css/style.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Nunito+Sans" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 	<!-- JS -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://use.fontawesome.com/c4965b9a48.js"></script>
@@ -52,8 +53,8 @@
       <!-- Main section -->
       <main class="mt-5">
 
-        <h1 class="main-heading">FULL STACK WEB DEVELOPER</h1>
-        <p class="lead mt-2 mb-3">Passionate, self-motivated and creative with an education in  Information Technology and Informatics and Entrepreneurship.</p>
+        <h1 class="main-heading animated bounceInLeft">FULL STACK WEB DEVELOPER</h1>
+        <p class="lead mt-2 mb-3 animated bounceInRight">Passionate, self-motivated and creative with an education in  Information Technology and Informatics and Entrepreneurship.</p>
 
       </main>
 
