rearrangement and css

--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
       <main class="mt-5">
 
         <h1 class="main-heading animated bounceInLeft">FULL STACK WEB DEVELOPER</h1>
-        <p class="lead mt-2 mb-3 animated bounceInRight">Passionate, self-motivated and creative with an education in  Information Technology and Informatics and Entrepreneurship.</p>
+
+          <p class="lead text-center mb-4">
+            <img class= "rounded-circle img-fluid mt-4 animated bounceInRight" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAmrAAAAJDU4M2E0ODNhLWVkNGUtNDgzNS04ZjdjLWM5MzkxOGUxNjE0Ng.jpg">
+           </p>
+        <p class="lead mt-2 mb-3 animated bounceInLeft">Passionate, self-motivated and creative with an education in  Information Technology and Informatics and Entrepreneurship.</p>
 
       </main>
 
@@ -73,9 +77,7 @@
           <hr>
           <div class="row mt-4 text-justify">
             <div class='col'>
-              <p class="lead text-center mb-4">
-                <img class= "rounded-circle img-fluid mt-4" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAmrAAAAJDU4M2E0ODNhLWVkNGUtNDgzNS04ZjdjLWM5MzkxOGUxNjE0Ng.jpg">
-              </p>
+
               <p>My name is Dan Testa. I am a recent graduate of Rutgers University, New Brunswick with a Bachelor's Degree in Information Technology and Informatics. I am excited to continue my education in this bootcamp. I took a few coding classes (HTML, CSS, JS) during college, but I still consider myself very new to coding. I grew up in Whitehouse Station, NJ and I still live there today.</p>
               <p>
               Technology and the entreprenuership opportunities that go along with it have always been an interest of mine. I would love to be able to walk away from this bootcamp with the ability to develop an application. I have a creative mind and I want to merge that with the technical skills of coding to make myself more well rounded.</p>
