--- a/index.html
+++ b/index.html
@@ -77,10 +77,7 @@
           <hr>
           <div class="row mt-4 text-justify">
             <div class='col'>
-
-              <p>My name is Dan Testa. I am a recent graduate of Rutgers University, New Brunswick with a Bachelor's Degree in Information Technology and Informatics. I am excited to continue my education in this bootcamp. I took a few coding classes (HTML, CSS, JS) during college, but I still consider myself very new to coding. I grew up in Whitehouse Station, NJ and I still live there today.</p>
-              <p>
-              Technology and the entreprenuership opportunities that go along with it have always been an interest of mine. I would love to be able to walk away from this bootcamp with the ability to develop an application. I have a creative mind and I want to merge that with the technical skills of coding to make myself more well rounded.</p>
+              <p>My name is Dan Testa. I am a recent graduate of the Rutgers University Full Stack Web Development Program, an intensive 24-week long bootcamp dedicated to designing and building web applications. I graduated from Rutgers University, New Brunswick with a Bachelor's Degree in Information Technology and Informatics and a minor in Entreprenuership. I am experienced with HTML5, CSS, Javascript, JQuery, Bootstrap, Materialize, Firebase, Node.js, MySQL, MongoDB, React.js. Additionally, knowledgeable in video and photo editing with programs such as Sony Vegas Pro and Adobe Photoshop. I grew up in Whitehouse Station, NJ and I still live there today.</p>
             </div>
           </div>
         </div>
