--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
       <!-- Header & Navbar --> 
       <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
 
           <a class="navbar-brand brand" id="brandTitle" href="#">DANIEL TESTA</a>
 
@@ -133,10 +133,10 @@
             <div class="col-sm mb-sm-0 mb-4">
               <div class="card" id="hangman">
 
-                  <img class="img-fluid rounded" src="https://i.gyazo.com/d1816c995934fb52adeb82ce95b583fd.png">
+                  <img class="img-fluid rounded" src="https://i.gyazo.com/e3efb5d1217fdcafa84c95260c18ea00.jpg">
 
               </div>
-              <span><a class="projLink" data-hover="Hangman Game" href="https://dantesta.github.io/Hangman-Game/" target="_blank">Hangman Game</a></span>
+              <span><a class="projLink" data-hover="Basket Builder" href="https://rocky-inlet-48927.herokuapp.com/" target="_blank">Basket Builder</a></span>
             </div>
           </div> 
 
