about me update

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <hr>
           <div class="row mt-4 text-justify">
             <div class='col'>
-              <p>My name is Dan Testa. I am a recent graduate of the Rutgers University Full Stack Web Development Program, an intensive 24-week long bootcamp dedicated to designing and building web applications. I graduated from Rutgers University, New Brunswick with a Bachelor's Degree in Information Technology and Informatics and a minor in Entreprenuership. I am experienced with HTML5, CSS, Javascript, JQuery, Bootstrap, Materialize, Firebase, Node.js, MySQL, MongoDB, React.js. Additionally, knowledgeable in video and photo editing with programs such as Sony Vegas Pro and Adobe Photoshop. I grew up in Whitehouse Station, NJ and I still live there today.</p>
+              <p>I am a recent graduate of the Rutgers University Full Stack Web Development Program, an intensive 24-week long bootcamp dedicated to designing and building web applications. I received a Bachelor's Degree in Information Technology and Informatics and a minor in Entreprenuership from Rutgers University, New Brunswick. I have strong experience with HTML5, CSS, Javascript, JQuery, Bootstrap, Materialize, Firebase, Node.js, MySQL, MongoDB, React.js. Additionally, proficient in video and photo editing with programs such as Sony Vegas Pro and Adobe Photoshop.</p>
             </div>
           </div>
         </div>
