--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h1 class="main-heading animated bounceInLeft">FULL STACK WEB DEVELOPER</h1>
 
           <p class="lead text-center mb-4">
-            <img class= "rounded-circle img-fluid mt-4 animated bounceInRight" src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAmrAAAAJDU4M2E0ODNhLWVkNGUtNDgzNS04ZjdjLWM5MzkxOGUxNjE0Ng.jpg">
+            <img class= "rounded-circle img-fluid mt-4 animated bounceInRight" src="https://media.licdn.com/dms/image/C4E03AQFw0B4Tn6deeg/profile-displayphoto-shrink_200_200/0?e=1532563200&v=beta&t=POIV7DpStNzUmxgOIf5jHKciqamP9uv9dpp9nW4rbfg">
            </p>
         <p class="lead mt-2 mb-3 animated bounceInLeft">Passionate, self-motivated and creative with an education in  Information Technology and Informatics and Entrepreneurship.</p>
 
